examples/test/testpolicy14674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14674
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key31: value34
      key26: value31
      key45: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value42
          key1: value31
          key23: value34
